force-app/main/default/objects/Template_Data__c/Template_Data__c.object-meta.xml
<CustomObject>
    <label>DocGenius Template Data</label>
    <nameField>
        <displayFormat>DG_Data-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DocGenius Template Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>