force-app/main/default/objects/Template_Data__c/fields/CSV_Fields__c.field-meta.xml
<CustomField>
    <fullName>CSV_Fields__c</fullName>
    <label>CSV Fields</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>