force-app/main/default/objects/Template_Data__c/fields/CSV_Filter__c.field-meta.xml
<CustomField>
    <fullName>CSV_Filter__c</fullName>
    <label>CSV Filter</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>