force-app/main/default/objects/Template_Data__c/fields/CSV_Logic__c.field-meta.xml
<CustomField>
    <fullName>CSV_Logic__c</fullName>
    <label>CSV Logic</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>