force-app/main/default/objects/Template_Data__c/fields/CSV_Orders__c.field-meta.xml
<CustomField>
    <fullName>CSV_Orders__c</fullName>
    <label>CSV Orders</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>