force-app/main/default/objects/Template_Data__c/fields/CSV_Query__c.field-meta.xml
<CustomField>
    <fullName>CSV_Query__c</fullName>
    <label>CSV Query</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>