force-app/main/default/objects/Template_Data__c/fields/Template_Page__c.field-meta.xml
<CustomField>
    <fullName>Template_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DocGenius Template Page</label>
    <referenceTo>Template_Page__c</referenceTo>
    <relationshipLabel>DocGenius Template Data</relationshipLabel>
    <relationshipName>Template_Data</relationshipName>
    <type>Lookup</type>
</CustomField>