force-app/main/default/objects/Template_Data__c/fields/Template_Value_Simple__c.field-meta.xml
<CustomField>
    <fullName>Template_Value_Simple__c</fullName>
    <label>Template Value [Simple]</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>