force-app/main/default/objects/Template_Data__c/fields/Value_Type__c.field-meta.xml
<CustomField>
    <fullName>Value_Type__c</fullName>
    <label>Value Type [Simple]</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Body Value</fullName>
            </value>
            <value>
                <fullName>Header Value</fullName>
            </value>
            <value>
                <fullName>Footer Value</fullName>
            </value>
            <value>
                <fullName>Watermark Value</fullName>
            </value>
            <value>
                <fullName>Extracted Mapping Keys</fullName>
            </value>
            <value>
                <fullName>Page Configurations</fullName>
                <isActive>false</isActive>
                <label>Page Configurations</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>